desktop first draft complete

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <h2>Your References Consolidated</h2>
             </div>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About Us</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
                 <a href="#">Join</a>
             </nav>
         </div>
@@ -65,7 +65,6 @@
         </div>
     </section>
     <footer>
-        <a href="#">Feedback</a>
         <p>copyright X 2019. All rights reserved.</p>
     </footer>
 </body>
