brandons buttons added

--- a/about.html
+++ b/about.html
@@ -90,7 +90,8 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repellendus odio provident quae dolorem
                     rerum obcaecati rem ut ad saepe. Labore corrupti natus odio doloribus in ipsam reprehenderit illum ex.</p>
                 <div>
-                    
+                    <a href="https://github.com/bteague92"><i class="fab fa-github"></i></a>
+                    <a href="https://twitter.com/bteague92"><i class="fab fa-twitter"></i></a>
                 </div> 
             </div>
         
