about ipsum replaced where info available

--- a/about.html
+++ b/about.html
@@ -29,9 +29,10 @@
         <div class='outer'>
             <div class='innerT'>
                 <h2>Chris Adams</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repellendus odio provident quae dolorem
-                    rerum obcaecati rem ut ad saepe. Labore corrupti natus odio doloribus in ipsam reprehenderit illum ex.</p>
-                <div>
+                <p> I am a highly motivated and aspiring web developer from Sarasota, FL. I am currently enrolled in Lambda School for Full Stack Web Development. I have been coding and programming as a hobby for about 3 years and enjoyed it so much I decided to make it a career. I have a passion for creating functional modern applications that look original.<br>
+
+                    When I'm not behind my computer I enjoy cycling and spending time with my family. I have a lovely wife and a young son who loves baseball and golf. I also enjoy golfing and helping my son with his baseball card collection. </p>
+                    <div>
                   <a href="https://github.com/cladams0203"><i class="fab fa-github"></i></a>
                   
                   <a href="https://christopher-adams.com"><i class="fas fa-globe"></i></a>  
@@ -49,8 +50,7 @@
         <div class='outer'>
             <div class='innerT'>
                 <h2>Susheela Bhat Harkins</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repellendus odio provident quae dolorem
-                    rerum obcaecati rem ut ad saepe. Labore corrupti natus odio doloribus in ipsam reprehenderit illum ex.</p>
+                <p>Susheela B-H, aka SoosheBot in digital spaces, is a journalist turned early career full-stack developer with a background in digital content and optimization. As a writer who frequently served as a bridge between IT and marketing/creative departments, Susheela works with a wide range of communities to effectively to diagnose problems, identify needs, and collaborate to prioritize solutions.</p>
                 <div>
                     <a href="https://github.com/SoosheBot"><i class="fab fa-github"></i></a>
                     <a href="https://twitter.com/SoosheBot"><i class="fab fa-twitter"></i></a>
@@ -67,7 +67,7 @@
         <div class='outer'>
             <div class='innerT'>
                 <h2>Nerissa Taylor</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repellendus odio provident quae dolorem
+                <p>Nerissa is a Full Stack Developer operating from Washington D.C. She is currently a Full time student at Lambda School. 
                     rerum obcaecati rem ut ad saepe. Labore corrupti natus odio doloribus in ipsam reprehenderit illum ex.</p>
                 <div>
                     <a href="https://github.com/nerissaj"><i class="fab fa-github"></i></a>
@@ -125,8 +125,7 @@
         <div class='outer'>
             <div class='innerT'>
                 <h2>Tony Burch</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repellendus odio provident quae dolorem
-                    rerum obcaecati rem ut ad saepe. Labore corrupti natus odio doloribus in ipsam reprehenderit illum ex.</p>
+                <p>I am currently a Web Development Student at Lambda School.  I have a basic understanding of HTML5, CSS, JavaScript, and Python. I also have an Entry-Level Certification in Python from the Python Institute. I have a background in construction as well as restaurant management, and from these backgrounds have learned the skills needed to organize and communicate with teams and to think about things in a modular way, understanding the role of each tree in the proverbial forest.</p>
                 <div>
                     <a href="https://github.com/TLBdev"><i class="fab fa-github"></i></a>
                     <a href="https://twitter.com/TLBdev"><i class="fab fa-twitter"></i></a>
