all ipsum replaced where possible

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
     <section class="colPicRight">
         <div class='outer'>
             <div class='innerT'>
-                <h2>Title</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repellendus odio provident quae dolorem
-                    rerum obcaecati rem ut ad saepe. Labore corrupti natus odio doloribus in ipsam reprehenderit illum ex.</p>
+                <h2>Welcome to Pintereach</h2>
+                <p>Pintereach is an online platform designed from the ground up to ease the life of todays academic. Keep all of you most commonly used articles and papers organized and ready for citations. Organize by category and use our card view to select by cover page. </p>
             </div>
         
             <div class='innerI'>
@@ -40,9 +39,8 @@
     <section class="colPicLeft">
         <div class='outer'>
             <div class='innerT'>
-                <h2>Title</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repellendus odio provident quae dolorem
-                    rerum obcaecati rem ut ad saepe. Labore corrupti natus odio doloribus in ipsam reprehenderit illum ex.</p>
+                <h2>The Future of Pintereach</h2>
+                <p>Future versions of the Pintereach App will include many Quality of Life improvements. Add friends and colleagues to share and collaborate. Integrate your social media accounts to find and collaborate quickly with a more diverse group of candidates.</p>
             </div>
         
             <div class='innerI'>
@@ -52,16 +50,16 @@
     </section>
     <section class="threeCol">
         <div>
-            <h2>Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet at voluptatibus pariatur aspernatur vel ex consectetur incidunt nisi, corrupti totam placeat eligendi deleniti rem illo neque magnam consequatur optio! Dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repellendus odio provident quae dolorem rerum obcaecati rem ut ad saepe. Labore corrupti natus odio doloribus in ipsam reprehenderit illum ex.</p>
+            <h2>Organization</h2>
+            <p>Our system allows you to assign your saved articles to categories. Keep your articles seperated by discipline or sub-discipline for easy referance.</p>
         </div>
         <div>
-            <h2>title</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repellendus odio provident quae dolorem rerum obcaecati rem ut ad saepe. Labore corrupti natus odio doloribus in ipsam reprehenderit illum ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam delectus vero molestias minus minima perspiciatis, eligendi optio! Impedit, repudiandae exercitationem. Magni in magnam eos culpa aspernatur aliquid tempora pariatur iure.</p>
+            <h2>Speed</h2>
+            <p>Keep all of your articles at hand and ready for use. Make the citation process faster by getting rid of all the binders on your book-shelf. </p>
         </div>
         <div>
-            <h2>title</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repellendus odio provident quae dolorem rerum obcaecati rem ut ad saepe. Labore corrupti natus odio doloribus in ipsam reprehenderit illum ex. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor eum magnam aliquam sed! In laboriosam cum vero totam debitis dignissimos eius voluptatem harum perferendis. Quasi voluptates accusantium tempore. In, fugiat.</p>
+            <h2>Efficiency</h2>
+            <p>Spend less time putting together your references and more time getting published with the power of Pintereach</p>
         </div>
     </section>
     <footer>
