all ipsum replaced

--- a/about.html
+++ b/about.html
@@ -87,8 +87,7 @@
         <div class='outer'>
             <div class='innerT'>
                 <h2>Brandon Teague</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repellendus odio provident quae dolorem
-                    rerum obcaecati rem ut ad saepe. Labore corrupti natus odio doloribus in ipsam reprehenderit illum ex.</p>
+                <p>My name is Brandon Teague. I'm 26 years old and live in Hickory, NC. I'm a Husband, Father, Brother, Son, Role Model, and Full Sack Web Developer. My hobbies include hiking, camping, working out, playing video games, and learning new things.</p>
                 <div>
                     <a href="https://github.com/bteague92"><i class="fab fa-github"></i></a>
                     <a href="https://twitter.com/bteague92"><i class="fab fa-twitter"></i></a>
@@ -106,8 +105,7 @@
         <div class='outer'>
             <div class='innerT'>
                 <h2>LC Carrier</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat repellendus odio provident quae dolorem
-                    rerum obcaecati rem ut ad saepe. Labore corrupti natus odio doloribus in ipsam reprehenderit illum ex.</p>
+                <p>LC is a Montreal based Full Stack Web Development Student who is currently enrolled in Lambda School.</p>
                 <div>
                     <a href="https://github.com/lccarrier"><i class="fab fa-github"></i></a>
                     <a href="https://twitter.com/lccarrier"><i class="fab fa-twitter"></i></a>
