edited brandons bio

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
         <div class='outer'>
             <div class='innerT'>
                 <h2>Brandon Teague</h2>
-                <p>My name is Brandon Teague. I'm 26 years old and live in Hickory, NC. I'm a Husband, Father, Brother, Son, Role Model, and Full Sack Web Developer. My hobbies include hiking, camping, working out, playing video games, and learning new things.</p>
+                <p>My name is Brandon Teague. I'm 26 years old and live in Hickory, NC. I'm a Husband, Father, Brother, Son, Role Model, and Full Stack Web Developer. My hobbies include hiking, camping, working out, playing video games, and learning new things.</p>
                 <div>
                     <a href="https://github.com/bteague92"><i class="fab fa-github"></i></a>
                     <a href="https://twitter.com/bteague92"><i class="fab fa-twitter"></i></a>
