--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         
             <div class='innerI'>
-                <img src="img/stock1" alt="">
+                <img src="img/ss1.png" alt="screenshot of app">
             </div>
         </div>
     </section>
@@ -44,7 +44,7 @@
             </div>
         
             <div class='innerI'>
-                <img src="img/stock1" alt="">
+                <img src="img/ss2.png" alt="">
             </div>
         </div>
     </section>
