frontend link changed

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
-                <a href="https://frontend.sooshebot.now.sh/">Join</a>
+                <a href="https://frontend.pintreach.now.sh/">Join</a>
             </nav>
         </div>
     </header>
